--- a/src/Componets/Footer/Footer.css
+++ b/src/Componets/Footer/Footer.css
@@ -66,7 +66,8 @@
 h3 {
     color: #e14b2c;
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 400;
+    font-variant: small-caps;
 }
 
 .Footer_Section_Text_Text {
@@ -86,8 +87,9 @@ h3 {
 
 .Footer_Section_Last_Div_Text {
     font-weight: 500;
-    font-size: 22px;
+    font-size: 18px;
     color: white;
+    font-variant: small-caps;
 }
 
 .active_nav {
@@ -170,7 +172,7 @@ h3 {
     h3 {
         color: #e14b2c;
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     .Footer_Section_Text_Text {
@@ -275,7 +277,7 @@ h3 {
     h3 {
         color: #e14b2c;
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     .Footer_Section_Text_Text {
@@ -382,7 +384,7 @@ h3 {
     h3 {
         color: #e14b2c;
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     .Footer_Section_Text_Text {
@@ -598,7 +600,7 @@ h3 {
     h3 {
         color: #e14b2c;
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     .Footer_Section_Text_Text {
