--- a/src/Pages/Home/FourthGrid/FourthGrid.css
+++ b/src/Pages/Home/FourthGrid/FourthGrid.css
@@ -10,11 +10,15 @@
 }
 
 .FourthGrid_Heading {
-    font-size: 28px;
-    font-weight: 600;
-    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #525658;
     text-align: center;
-    padding: 20px 0px;
+    font-size: 2.4em;
+    font-variant: small-caps;
+    font-weight: 200;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    letter-spacing: .4em;
 }
 
 .FourthGrid_Section {
@@ -37,14 +41,19 @@
     width: 25%;
     height: 400px;
     padding: 10px;
-    border: 1px solid #8d8484;
+    border: 1px solid #fefefe;
+    box-shadow: none;
+    cursor: auto;
 }
 
 .FourthGrid_Section_Main_First_Card_Heading {
     font-size: 25px;
-    font-weight: 600;
-    color: #c74126;
+    font-weight: 400;
+    color: #e14b2c;
     text-align: center;
+    font-variant: small-caps;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    cursor: auto;
 }
 
 .FourthGrid_Section_Main_First_Card_Image {
@@ -54,8 +63,8 @@
 
 .FourthGrid_Section_Main_First_Card_Paragraph {
     font-size: 18px;
-    font-weight: 600;
-    color: #3a3c3e;
+    font-weight: 300;
+    color: #999;
     line-height: 19px;
     letter-spacing: 1px;
     width: 100%;
@@ -64,15 +73,20 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     overflow: hidden;
-
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    cursor: auto;
 }
 
 .FourthGrid_Section_Main_Second_Card_Heading {
-    font-size: 28px;
-    font-weight: 600;
-    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #525658;
     text-align: center;
-    padding: 20px 0px;
+    font-size: 2.4em;
+    font-variant: small-caps;
+    font-weight: 200;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    letter-spacing: .4em;
 
 }
 
@@ -95,15 +109,20 @@
     width: 90%;
     height: 400px;
     padding: 10px;
-    border: 1px solid green;
-    margin: 10px 20px;
+    border: 1px solid #fefefe;
+    box-shadow: none;
+    cursor: auto;
+
 }
 
 .FourthGrid_Section_Main_First_Card_Card_Heading {
     font-size: 25px;
-    font-weight: 600;
-    color: #c74126;
+    font-weight: 400;
+    color: #e14b2c;
     text-align: center;
+    font-variant: small-caps;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    cursor: auto;
 }
 
 .FourthGrid_Section_Main_Second_Card_Image {
@@ -119,11 +138,15 @@
     }
 
     .FourthGrid_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        letter-spacing: .4em;
     }
 
     .FourthGrid_Section {
@@ -146,7 +169,9 @@
         width: 35%;
         height: 400px;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Heading {
@@ -163,8 +188,8 @@
 
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
-        font-weight: 600;
-        color: #3a3c3e;
+        font-weight: 300;
+        color: #999;
         line-height: 19px;
         letter-spacing: 1px;
         width: 100%;
@@ -173,15 +198,19 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
         overflow: hidden;
-
+        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .FourthGrid_Section_Main_Second_Card_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        letter-spacing: .4em;
 
     }
 
@@ -204,15 +233,19 @@
         width: 90%;
         height: 400px;
         padding: 10px;
-        border: 1px solid green;
-        margin: 10px 20px;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Card_Heading {
         font-size: 25px;
-        font-weight: 600;
-        color: #c74126;
+        font-weight: 400;
+        color: #e14b2c;
         text-align: center;
+        font-variant: small-caps;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_Second_Card_Image {
@@ -230,11 +263,15 @@
     }
 
     .FourthGrid_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        letter-spacing: .4em;
     }
 
     .FourthGrid_Section {
@@ -257,7 +294,9 @@
         width: 45%;
         height: 400px;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Heading {
@@ -274,8 +313,8 @@
 
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
-        font-weight: 600;
-        color: #3a3c3e;
+        font-weight: 300;
+        color: #999;
         line-height: 19px;
         letter-spacing: 1px;
         width: 100%;
@@ -284,15 +323,19 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
         overflow: hidden;
-
+        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .FourthGrid_Section_Main_Second_Card_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        letter-spacing: .4em;
 
     }
 
@@ -315,15 +358,19 @@
         width: 90%;
         height: 400px;
         padding: 10px;
-        border: 1px solid green;
-        margin: 10px 20px;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Card_Heading {
         font-size: 25px;
-        font-weight: 600;
-        color: #c74126;
+        font-weight: 400;
+        color: #e14b2c;
         text-align: center;
+        font-variant: small-caps;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_Second_Card_Image {
@@ -341,11 +388,15 @@
     }
 
     .FourthGrid_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        letter-spacing: .4em;
     }
 
     .FourthGrid_Section {
@@ -368,7 +419,9 @@
         width: 70%;
         height: 400px;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Heading {
@@ -385,8 +438,8 @@
 
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
-        font-weight: 600;
-        color: #3a3c3e;
+        font-weight: 300;
+        color: #999;
         line-height: 19px;
         letter-spacing: 1px;
         width: 100%;
@@ -395,15 +448,19 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
         overflow: hidden;
-
+        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .FourthGrid_Section_Main_Second_Card_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2.4em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        letter-spacing: .4em;
 
     }
 
@@ -426,14 +483,19 @@
         width: 70%;
         height: 400px;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Card_Heading {
         font-size: 25px;
-        font-weight: 600;
-        color: #c74126;
+        font-weight: 400;
+        color: #e14b2c;
         text-align: center;
+        font-variant: small-caps;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_Second_Card_Image {
@@ -451,11 +513,15 @@
     }
 
     .FourthGrid_Heading {
-        font-size: 28px;
-        font-weight: 600;
-        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
-        padding: 20px 0px;
+        font-size: 2em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        letter-spacing: .2em;
     }
 
     .FourthGrid_Section {
@@ -478,7 +544,9 @@
         width: 80%;
         height: 100%;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Heading {
@@ -495,21 +563,27 @@
 
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
-        font-weight: 600;
-        color: #3a3c3e;
+        font-weight: 300;
+        color: #999;
         width: 100%;
         height: 100%;
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
         overflow: hidden;
+        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .FourthGrid_Section_Main_Second_Card_Heading {
-        font-size: 25px;
-        font-weight: 600;
-        color: #c74126;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #525658;
         text-align: center;
+        font-size: 2em;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        letter-spacing: .2em;
     }
 
     .FourthGrid_Section_Main_Second_Card {
@@ -530,14 +604,19 @@
         width: 75% !important;
         height: 100%;
         padding: 10px;
-        border: 1px solid #8d8484;
+        border: 1px solid #fefefe;
+        box-shadow: none;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_First_Card_Card_Heading {
         font-size: 25px;
-        font-weight: 600;
-        color: #c74126;
+        font-weight: 400;
+        color: #e14b2c;
         text-align: center;
+        font-variant: small-caps;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        cursor: auto;
     }
 
     .FourthGrid_Section_Main_Second_Card_Image {
