--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -55,8 +55,8 @@
 }
 
 .para {
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: 400;
     margin: 10px;
     line-height: 19px;
     letter-spacing: 1px;
@@ -72,17 +72,23 @@
 }
 
 .ReadMore {
-    width: 120px;
+    width: 100%;
     height: 40px;
-    background-color: rgba(101, 155, 174, 0.8);
+    background-color: transparent;
     color: white;
     border-radius: 10px;
-    float: right;
+    text-align: right;
     border: none;
     outline: none;
-    font-size: 16px;
+    font-size: 15px;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 400;
+    font-variant: small-caps;
+    padding: 2px 5px 2px 0px;
+}
+
+.ReadMore:hover {
+    background-color: rgb(177, 176, 176);
 }
 
 .About_Grid_Right {
@@ -128,7 +134,7 @@
 
     .para {
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
         margin: 10px;
         line-height: 19px;
         letter-spacing: 1px;
@@ -144,17 +150,19 @@
     }
 
     .ReadMore {
-        width: 120px;
+        width: 100%;
         height: 40px;
-        background-color: rgba(101, 155, 174, 0.8);
+        background-color: transparent;
         color: white;
         border-radius: 10px;
-        float: right;
+        text-align: right;
         border: none;
         outline: none;
-        font-size: 16px;
+        font-size: 15px;
         cursor: pointer;
-        font-weight: 600;
+        font-weight: 400;
+        font-variant: small-caps;
+        padding: 2px 5px 2px 0px;
     }
 }
 
@@ -195,7 +203,7 @@
 
     .para {
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
         margin: 10px;
         line-height: 19px;
         letter-spacing: 1px;
@@ -211,17 +219,19 @@
     }
 
     .ReadMore {
-        width: 120px;
+        width: 100%;
         height: 40px;
-        background-color: rgba(101, 155, 174, 0.8);
+        background-color: transparent;
         color: white;
         border-radius: 10px;
-        float: right;
+        text-align: right;
         border: none;
         outline: none;
-        font-size: 16px;
+        font-size: 15px;
         cursor: pointer;
-        font-weight: 600;
+        font-weight: 400;
+        font-variant: small-caps;
+        padding: 2px 5px 2px 0px;
     }
 }
 
@@ -280,7 +290,7 @@
 
     .para {
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
         margin: 10px;
         line-height: 19px;
         letter-spacing: 1px;
@@ -296,17 +306,19 @@
     }
 
     .ReadMore {
-        width: 120px;
+        width: 100%;
         height: 40px;
-        background-color: rgba(101, 155, 174, 0.8);
+        background-color: transparent;
         color: white;
         border-radius: 10px;
-        float: right;
+        text-align: right;
         border: none;
         outline: none;
-        font-size: 16px;
+        font-size: 15px;
         cursor: pointer;
-        font-weight: 600;
+        font-weight: 400;
+        font-variant: small-caps;
+        padding: 2px 5px 2px 0px;
     }
 }
 
@@ -365,7 +377,7 @@
 
     .para {
         font-size: 15px;
-        font-weight: 600;
+        font-weight: 400;
         margin: 10px;
         line-height: 19px;
         letter-spacing: 1px;
@@ -381,16 +393,18 @@
     }
 
     .ReadMore {
-        width: 120px;
+        width: 100%;
         height: 40px;
-        background-color: rgba(101, 155, 174, 0.8);
+        background-color: transparent;
         color: white;
         border-radius: 10px;
-        float: right;
+        text-align: right;
         border: none;
         outline: none;
-        font-size: 16px;
+        font-size: 15px;
         cursor: pointer;
-        font-weight: 600;
+        font-weight: 400;
+        font-variant: small-caps;
+        padding: 2px 5px 2px 0px;
     }
 }
