--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -39,6 +39,7 @@
     font-weight: 600;
     padding: 20px 0px;
     color: #3a3c3e;
+    letter-spacing: .1em;
 }
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
