--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -10,20 +10,20 @@
     height: auto;
     padding: 2px;
     display: grid;
-    grid-template-columns: 3fr 8fr 1fr;
+    grid-template-columns: 1fr 10fr 1fr;
     grid-template-rows: auto;
     grid-column-gap: 10px;
 }
 
 .Contact_Grid_Left {
-    height: 500px;
+
     width: 100%;
 
 }
 
 .Contact_Container {
     width: 100%;
-    height: 400px;
+    height: 300px;
     margin: 110px 0px 0px 0px;
     padding-top: 10px;
     box-sizing: border-box;
@@ -31,7 +31,7 @@
 }
 
 .Contact_Main {
-    width: 90%;
+    width: 100%;
     height: 30vh;
     margin: 50px auto;
     display: grid;
@@ -42,9 +42,9 @@
 
 .Contact_Box {
     width: 100%;
-    height: 200px;
+    height: auto;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     font-size: 18px;
     gap: 20px;
 
@@ -56,7 +56,7 @@
     background: #fff;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     border-radius: 50%;
     font-size: 22px;
 }
@@ -72,11 +72,26 @@
     font-size: 18px;
     font-weight: 500;
     color: #3a3c3e;
+    line-height: 1.5em;
 }
 
 .Contact_Grid_Right {
-    height: 500px;
+
     width: 100%;
+
+}
+
+.Contact_map {
+    width: 90%;
+    height: auto;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: auto;
+}
+
+.Contact_map_map {
+    width: 100%;
+    height: 400px;
 
 }
 
@@ -104,7 +119,7 @@
         width: 100%;
         height: 200px;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         font-size: 18px;
         gap: 20px;
 
@@ -116,7 +131,7 @@
         background: #fff;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: baseline;
         border-radius: 50%;
         font-size: 22px;
     }
@@ -132,6 +147,20 @@
         font-size: 18px;
         font-weight: 500;
         color: #3a3c3e;
+    }
+
+    .Contact_map {
+        width: 90%;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        margin: auto;
+    }
+
+    .Contact_map_map {
+        width: 100%;
+        height: 400px;
+
     }
 }
 
@@ -176,7 +205,7 @@
         width: 100%;
         height: 200px;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         font-size: 18px;
         gap: 20px;
         padding: 5px;
@@ -188,7 +217,7 @@
         background: #fff;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: baseline;
         border-radius: 50%;
         font-size: 22px;
     }
@@ -204,6 +233,20 @@
         font-size: 16px;
         font-weight: 500;
         color: #3a3c3e;
+    }
+
+    .Contact_map {
+        width: 90%;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        margin: auto;
+    }
+
+    .Contact_map_map {
+        width: 100%;
+        height: 400px;
+
     }
 }
 
@@ -248,12 +291,12 @@
 
     .Contact_Box {
         width: 100%;
-        height: 200px;
+        height: auto;
         display: flex;
-        align-items: center !important;
+        align-items: flex-start;
         font-size: 18px;
         gap: 20px;
-        margin: auto;
+        margin: 15px auto 15px auto;
 
     }
 
@@ -263,7 +306,7 @@
         background: #fff;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: baseline;
         border-radius: 50%;
         font-size: 22px;
     }
@@ -279,6 +322,20 @@
         font-size: 18px;
         font-weight: 500;
         color: #3a3c3e;
+    }
+
+    .Contact_map {
+        width: 95%;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        margin: auto;
+    }
+
+    .Contact_map_map {
+        width: 100%;
+        height: 400px;
+
     }
 }
 
@@ -323,12 +380,12 @@
 
     .Contact_Box {
         width: 100%;
-        height: 200px;
+        height: auto;
         display: flex;
-        align-items: center !important;
+        align-items: flex-start !important;
         font-size: 18px;
         gap: 20px;
-        margin: auto;
+        margin: 15px auto 15px auto;
 
     }
 
@@ -338,7 +395,7 @@
         background: #fff;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: baseline;
         border-radius: 50%;
         font-size: 22px;
     }
@@ -354,5 +411,19 @@
         font-size: 18px;
         font-weight: 500;
         color: #3a3c3e;
+    }
+
+    .Contact_map {
+        width: 95%;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        margin: auto;
+    }
+
+    .Contact_map_map {
+        width: 100%;
+        height: 400px;
+
     }
 }
